# asteroids_GL

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.c  state.h
src/entity/: asteroid.h  bullet.h  ship.c  ship.h
src/gfx/: shaders.c  shaders.h  window.c  window.h
src/util/: dynArray.c  dynArray.h  dynArrayBullet.c  dynArrayBullet.h  pointManip.c  pointManip.h  utilities.h
